syntax = "proto3";

package example;

message Events {
    repeated Vault vaults = 1;
    repeated Position positions = 2;
}

message Vault {
    string address = 1;
    string token0 = 2;
    string token1 = 3;
    uint64 vault_id = 4;
    uint64 block_number = 5;
    string timestamp = 6;
    string factory = 7;
}

message Position {
    uint64 position_id = 1;
    string owner = 2;
    string amount0 = 3;
    string amount1 = 4;
    uint64 block_number = 5;
    string timestamp = 6;
    string vault = 7;
}